syntax = "proto3";

package retail.inventory;

option java_package = "com.retail.inventoryservice.proto";
option java_multiple_files = true;
option java_outer_classname = "InventoryProto";

// Internal gRPC service for service-to-service calls.
// Order Service uses this to check and reserve stock.
// Product catalog browsing stays on REST (for browser/frontend).
service InventoryGrpc {
  rpc CheckStock(CheckStockRequest) returns (CheckStockResponse);
  rpc ReserveStock(ReserveStockRequest) returns (ReserveStockResponse);
}

message CheckStockRequest {
  int64 product_id = 1;
}

message CheckStockResponse {
  int64 product_id = 1;
  int32 available_stock = 2;
  bool in_stock = 3;
}

message ReserveStockRequest {
  int64 order_id = 1;
  int64 product_id = 2;
  int32 quantity = 3;
}

message ReserveStockResponse {
  bool success = 1;
  string message = 2;
}
